Rec View die Abfrage muss ausführbar gemacht werden