@@ -27,9 +27,9 @@ public class RecAnalysisView extends VerticalLayout {
     private Component buildForm() {
 
         Map<String, List<String>> lookingAt = new HashMap<>();
-        lookingAt.put("new API", Arrays.asList("in development", "requirements", "data", "Infrastructure", "known error", "general", "not sure"));
-        lookingAt.put("new Project", Arrays.asList("in development", "requirements", "data", "Infrastructure", "known error", "general", "not sure"));
-        lookingAt.put("operated System", Arrays.asList("UI", "API", "Datasource", "Data", "known error", "production hardware", "Infrastructure", "runtime behavior", "Code Quality", "general", "not sure"));
+        lookingAt.put("new API", List.of("in development", "requirements", "data", "Infrastructure", "known error", "general", "not sure"));
+        lookingAt.put("new Project", List.of("in development", "requirements", "data", "Infrastructure", "known error", "general", "not sure"));
+        lookingAt.put("operated System", List.of("UI", "API", "Datasource", "Data", "known error", "production hardware", "Infrastructure", "runtime behavior", "Code Quality", "general", "not sure"));
 
         ComboBox<String> box1 = new ComboBox<>("looking at", lookingAt.keySet());
         box1.setPlaceholder("please select");
